# createGauss3dData

./: README.md  createGauss3dData.py  pyproject.toml
creategauss3ddata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
