[tool.poetry]
name = "creategauss3ddata"
version = "0.1.0"
description = ""
authors = ["array_fish <uekusa_hideaki@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.5.2"
numpy = "^1.19.2"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
